envoy/envoy-front-proxy-config.yml
---
tracing:
  http:
    name: envoy.zipkin
    config:
      collector_cluster: jaeger
      collector_endpoint: "/api/v1/spans"

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 8000 }

static_resources:
  listeners:
    - name: engress_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        filters:
          - name: "envoy.http_connection_manager"
            config:
              tracing:
                provider:
                  name: envoy.tracers.zipkin
                  typed_config:
                    "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
                    collector_cluster: jaeger
                    collector_endpoint: "/api/v2/spans"
                    shared_span_context: false
                    collector_endpoint_version: HTTP_JSON
              use_remote_address: true
              add_user_agent: true
              stat_prefix: "egress_http"
              codec_type: "AUTO"
              generate_request_id: true
              route_config:
                name: "egress-route"
                virtual_hosts:
                  - name: "egress-service"
                    domains: ["*"]
                    routes:
                      - match: {prefix: "/service1"}
                        route: { cluster: "springboot-service-envoy-1"}
                      - match: {prefix: "/service2"}
                        route: { cluster: "springboot-service-envoy-2"}
              http_filters:
                - name: "envoy.router"

  clusters:
    -
      name: "springboot-service-envoy-2"
      connect_timeout: "0.5s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "springboot-service-2"
            port_value: 10000
    -
      name: "springboot-service-envoy-1"
      connect_timeout: "0.5s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "springboot-service-1"
            port_value: 10000
    -
      name: "jaeger"
      connect_timeout: "0.5s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "zipkin"
            port_value: 9411
